feat: add course-service microservice, MCP aggregation, cross-service RAG + Agent