@@ -15,28 +15,47 @@ public class RagService {
 
     private final VectorStoreService vectorStoreService;
     private final LlmService llmService;
+    private final CourseServiceClient courseClient;
 
     public AiResponse ask(String question) {
         List<DocumentRecord> relevantDocs = vectorStoreService.search(question, 3);
 
-        String context = relevantDocs.stream()
+        String docContext = relevantDocs.stream()
                 .map(d -> "Title: " + d.getTitle() + "\nContent: " + d.getContent())
                 .collect(Collectors.joining("\n\n---\n\n"));
 
+        List<Map<String, Object>> courses = courseClient.getAllCourses();
+        String courseContext = courses.stream()
+                .map(c -> "Course: " + c.get("title") + " - " + c.get("description") + " (Instructor: " + c.get("instructor") + ", Credits: " + c.get("credits") + ")")
+                .collect(Collectors.joining("\n"));
+
+        StringBuilder fullContext = new StringBuilder();
+        if (!docContext.isEmpty()) {
+            fullContext.append("=== Documents ===\n").append(docContext);
+        }
+        if (!courseContext.isEmpty()) {
+            if (fullContext.length() > 0) fullContext.append("\n\n");
+            fullContext.append("=== Available Courses ===\n").append(courseContext);
+        }
+        if (fullContext.isEmpty()) {
+            fullContext.append("No relevant context found.");
+        }
+
         List<String> sources = relevantDocs.stream()
                 .map(DocumentRecord::getTitle)
-                .toList();
+                .collect(Collectors.toList());
+        if (!courses.isEmpty()) sources.add("Course Catalog (" + courses.size() + " courses)");
 
-        String systemPrompt = "You are a helpful AI assistant. Answer the question based on the provided context. "
+        String systemPrompt = "You are a helpful AI assistant. Answer the question based on the provided context from documents and course catalog. "
                 + "If the context doesn't contain enough information, say so honestly."
-                + "\n\nContext:\n" + (context.isEmpty() ? "No relevant context found." : context);
+                + "\n\nContext:\n" + fullContext;
 
         String response = llmService.chatWithContext(systemPrompt, question);
 
         return new AiResponse(
                 response,
                 sources,
-                Map.of("context_chunks", relevantDocs.size(), "model", "llama3.2")
+                Map.of("context_chunks", relevantDocs.size(), "courses_available", courses.size(), "model", "llama3.2")
         );
     }
 }
